Bug 255516 - [WGSL] Call expressions can't always use the inferred type for serialization
Summary: [WGSL] Call expressions can't always use the inferred type for serialization
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-17 06:31 PDT by Tadeu Zagallo
Modified: 2023-04-18 02:58 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-04-17 06:31:14 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-04-17 06:32:20 PDT
<rdar://problem/108135679>
Comment 2 Tadeu Zagallo 2023-04-17 06:40:10 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12795
Comment 3 EWS 2023-04-18 02:58:27 PDT
Committed 263067@main (fd6a43bbb691): <https://commits.webkit.org/263067@main>

Reviewed commits have been landed. Closing PR #12795 and removing active labels.