[WGSL] Call expressions can't always use the inferred type for serialization https://bugs.webkit.org/show_bug.cgi?id=255516 rdar://108135679

Reviewed by Mike Wyrzykowski.

In https://commits.webkit.org/262528@main we started using the inferred type for
call expressions' targets when serializing. That was necessary when constructing
parameterized without explicitly providing the content type, since that relies on
type inference. However, the type of CallExpression::target is a bit misleading,
since it claims to be a type, but isn't always a type. In order to solve that, we
check if target is a valid type name, otherwise we write out the string value of
the target as is.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/263067@main